# Robotics_project2_polimi

./: CMakeLists.txt  README.md  info.txt  package.xml
config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  slam_config_file.yaml  slam_local_param.yml
csv/: goals.csv
launch/: amcl.launch.xml  launch.launch  turtlebot_amcl.launch
maps/: map.yaml
maps/stage/: turtlebot.inc
rviz/: mapping.rviz  robot_navigation.rviz
src/: LaserFilterNode.cpp  goal_sender_node.cpp  odomtotf.cpp
